--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Trivia Game</title>
 </head>
 <body>
@@ -16,9 +16,10 @@
             <button id="start_game">Start</button>
         </div>
         <div class="container" id="question_div">
-            <h1>Time Left: <span id="timer"></span></h1> 
+            <h1>Time Left: <span id="timer"></span></h1>
+            <button id="end_game">Submit</button>
         </div>
-        <div class="container" id="result_div">Result 'Page'</div>
+        <div class="container" id="result_div">All Done!</div>
     </div>
 </body>
 </html>
